--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="3 days" />
     <meta name="googlebot" content="all" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Black+Han+Sans" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Viga" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -377,9 +377,27 @@
             <div id="craftCommands">CRAFT</div>
             <div id="mapCommands">MAP</div>
         </div>
+
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-78561996-8"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-78561996-8');
+        </script>
     </div>
     <div id="featuredVideo">
         Featured Video
+    </div>
+    <div id="trevda">
+
+
+        <div style="display:flex;width:650px;height:250px;">
+            <div class="ympb_target" data-type="desktop-medrec-template" data-subtype="300x250"></div>
+            <div style="padding-left:50px"></div>
+            <div class="ympb_target" data-type="desktop-medrec-template" data-subtype="300x250"></div>
+        </div>
     </div>
     <div id="preroll">
     </div>
