--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="3 days" />
     <meta name="googlebot" content="all" />
-    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Black+Han+Sans" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Viga" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
