--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
     <meta property="og:url" content="https://devast.io" />
     <meta property="og:site_name" content="devast.io" />
-    <meta property="og:image" content="https://devast.io/img/banner.png" />
+    <meta property="og:image" content="img/banner.png" />
     <meta property="og:image:width" content="500" />
     <meta property="og:image:height" content="250" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -24,21 +24,21 @@
     <meta name="twitter:title" content="Devast.io - The post-apocalyptic survival game" />
     <meta name="twitter:description"
         content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
-    <meta name="twitter:image" content="https://devast.io/img/banner.png" />
+    <meta name="twitter:image" content="img/banner.png" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="robots" content="index, follow" />
     <meta name="revisit-after" content="3 days" />
     <meta name="googlebot" content="all" />
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Black+Han+Sans" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Viga" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body id="bod">
     <canvas id="can"></canvas>
-    <script src="js/client.30.1982.min.js"></script>
+    <script src="client.30.1982.min.js"></script>
     <div id="nickname">
         <input id="nicknameInput" type="text" placeholder="Nickname" maxLength="16">
     </div>
