--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
     <meta property="og:title" content="Devast.io - The post-apocalyptic survival game" />
     <meta property="og:description"
         content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
-    <meta property="og:url" content="https://devast.io" />
+    <meta property="og:url" content="https://devasio.github.io/Devast/" />
     <meta property="og:site_name" content="devast.io" />
-    <meta property="og:image" content="https://github.com/devasio/Devast/blob/main/img/banner.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/devasio/Devast/main/img/banner.png" />
     <meta property="og:image:width" content="500" />
     <meta property="og:image:height" content="250" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@devast.io" />
     <meta name="twitter:creator" content="@lapamauve" />
-    <meta name="twitter:url" content="https://devast.io" />
+    <meta name="twitter:url" content="https://devasio.github.io/Devast/" />
     <meta name="twitter:title" content="Devast.io - The post-apocalyptic survival game" />
     <meta name="twitter:description"
         content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
-    <meta name="twitter:image" content="https://github.com/devasio/Devast/blob/main/img/banner.png" />
+    <meta name="twitter:image" content="https://raw.githubusercontent.com/devasio/Devast/main/img/banner.png" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="robots" content="index, follow" />
@@ -378,7 +378,6 @@
             <div id="mapCommands">MAP</div>
         </div>
 
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-78561996-8"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag() { dataLayer.push(arguments); }
