--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
         <input id="nicknameInput" type="text" placeholder="Nickname" maxLength="16">
     </div>
     <div id="terms">
-        <a href="./authors/" target="blank">Authors</a> - <a href="./termsofuse/" target="blank">Terms of Use</a> - <a
-            href="./privacy/" target="blank">Privacy</a>
     </div>
     <div id="serverList">
         <select id="servers">
@@ -52,11 +50,11 @@
     </div>
     <div id="changelog">
         <div id="changelogTitle">CHANGELOG</div>
-        <a href="./changelog/" target="blank"><img id="changelogImg" src="./img/changelog-28.png" alt="Devastio"></a>
+        <a target="blank"><img id="changelogImg" src="./img/changelog-28.png" alt="Devastio"></a>
         <div id="scrollChangelog">
 
 
-            <div style="margin-top: 5px;"> - <a href="./changelog/" target="blank" style="color:white;">SEE MORE</a> -
+            <div style="margin-top: 5px;"> - <a target="blank" style="color:white;">SEE MORE</a> -
             </div>
             <div id="changelogText">Your predecessors did not survive. But they have left behind <span
                     style="color:#bcb33e;">some vestiges!</span> Dare to venture into the <span
