--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body id="bod">
     <canvas id="can"></canvas>
-    <script src="client.30.1982.min.js"></script>
+    <script src="client.js"></script>
     <div id="nickname">
         <input id="nicknameInput" type="text" placeholder="Nickname" maxLength="16">
     </div>
