--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
         </div>
 
     </div>
+    <div id="preroll">
+    </div>
     <div id="chat">
         <input id="chatInput" type="text" placeholder="Enter text..." maxLength="60">
     </div>
