--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 Have you always dreamed of being green and radioactive? Do you look good with dynamite? Do you want to
                 work with long, rotten brains? Maybe you're cut out to <span style="color:#bcb33e;">be a Ghoul</span>?
                 That's good news! The <span style="color:#bcb33e;">new game mode </span>offers you the opportunity to
-                transform yourself and create chaos around you!"</span>
+                transform yourself and create chaos around you!</span>
             </div>
         </div>
     </div>
