--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <a target="blank"><img id="changelogImg" src="./img/changelog-28.png" alt="Devastio"></a>
         <div id="scrollChangelog">
             <div style="margin-top: 5px;"> - <a target="blank" style="color:white;">SEE MORE</a> -
-                <!-- <div style="margin-top: 5px;"><a target="blank" style="color:rgb(185, 113, 19);">NEW! </a><a target="blank" style="color:rgb(58, 185, 19);">Press ` to see Player List</a> -->
-            </div>
+                <!-- <div style="margin-top: 5px;"><a target="blank" style="color:rgb(185, 113, 19);">NEW! </a><a target="blank" style="color:rgb(58, 185, 19);">Press ` to see Player List</a>
+            </div> -->
         </div>
             <div id="changelogText">Your predecessors did not survive. But they have left behind <span
                     style="color:#bcb33e;">some vestiges!</span> Dare to venture into the <span
