--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body id="bod">
     <canvas id="can"></canvas>
-    <script src="client.js"></script>
+    <script src="dist.js"></script>
     <div id="nickname">
         <input id="nicknameInput" type="text" placeholder="Nickname" maxLength="16">
     </div>
