--- a/index.html
+++ b/index.html
@@ -1,85 +1,78 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Devast.io - The Online Post-Apocalyptic Survival Game.</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="description"
-        content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
-    <meta name="keywords"
-        content="devast, devast.io, post-apocalyptic, post-apocalyptic survival game, survival game, online game, mmo, multiplayer, starve.io, starveio, survival, io games, .io, craft, browser game, html game, html5 game, flash game, wasteland, radioactivity, irradiated city, uranium, hunger, cold, weapons, crafting, cities, nuclear war, nuclear, cute, fun, hardcore, fight" />
-    <meta property="og:title" content="Devast.io - The post-apocalyptic survival game" />
-    <meta property="og:description"
-        content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
-    <meta property="og:url" content="https://devasio.github.io/Devast/" />
-    <meta property="og:site_name" content="devast.io" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/devasio/Devast/main/img/bubblegum2out.png" />
-    <meta property="og:image:width" content="800" />
-    <meta property="og:image:height" content="450" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="robots" content="index, follow" />
-    <meta name="revisit-after" content="3 days" />
-    <meta name="googlebot" content="all" />
-    <link rel="icon" type="image/png" href="img/favicon.png" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Black+Han+Sans" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Viga" />
-    <link rel="stylesheet" type="text/css" href="style.css" />
+<title>Devast.io - The Online Post-Apocalyptic Survival Game.</title>
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="description" content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
+<meta name="keywords" content="devast, devast.io, post-apocalyptic, post-apocalyptic survival game, survival game, online game, mmo, multiplayer, starve.io, starveio, survival, io games, .io, craft, browser game, html game, html5 game, flash game, wasteland, radioactivity, irradiated city, uranium, hunger, cold, weapons, crafting, cities, nuclear war, nuclear, cute, fun, hardcore, fight" />
+<meta property="og:title" content="Devast.io - The post-apocalyptic survival game" />
+<meta property="og:description" content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
+<meta property="og:url" content="https://devasio.github.io/Devast/" />
+<meta property="og:site_name" content="devast.io" />
+<meta property="og:image" content="https://raw.githubusercontent.com/devasio/Devast/main/img/banner.png" />
+<meta property="og:image:width" content="500" />
+<meta property="og:image:height" content="250" />
+<meta name="mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="robots" content="index, follow" />
+<meta name="revisit-after" content="3 days" />
+<meta name="googlebot" content="all" />
+<link rel="icon" type="image/png" href="img/favicon.png" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Black+Han+Sans" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Viga" />
+<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 <body id="bod">
-    <canvas id="can"></canvas>
-    <script src="client.js"></script>
-    <div id="nickname">
-        <input id="nicknameInput" type="text" placeholder="Nickname" maxLength="16">
-    </div>
-    <div id="serverList">
-        <select id="servers">
-        </select>
-    </div>
-    <div id="changelog">
-        <div id="changelogTitle">CHANGELOG</div>
-        <a target="blank"><img id="changelogImg" src="./img/changelog-28.png" alt="Devastio"></a>
-        <div id="scrollChangelog">
-            <div style="margin-top: 5px;"> - <a target="blank" style="color:white;">SEE MORE</a> -
-                <!-- <div style="margin-top: 5px;"><a target="blank" style="color:rgb(185, 113, 19);">NEW! </a><a target="blank" style="color:rgb(58, 185, 19);">Press ` to see Player List</a>
-            </div> -->
-        </div>
-            <div id="changelogText">Your predecessors did not survive. But they have left behind <span
-                    style="color:#bcb33e;">some vestiges!</span> Dare to venture into the <span
-                    style="color:#bcb33e;">cave</span>, tunnel through the stone and maybe you will discover a <span
-                    style="color:#bcb33e;">hidden bunker</span>.
-                Have you always dreamed of being green and radioactive? Do you look good with dynamite? Do you want to
-                work with long, rotten brains? Maybe you're cut out to <span style="color:#bcb33e;">be a Ghoul</span>?
-                That's good news! The <span style="color:#bcb33e;">new game mode </span>offers you the opportunity to
-                transform yourself and create chaos around you!</span>
-            </div>
-        </div>
-    </div>
-    <div id="howtoplay">
-        <div id="howtoplayTitle">HOW TO PLAY?</div>
-        <div id="howtoplayText">
-            <p><span style="color:#bcb33e;">Eat</span>, <span style="color:#bcb33e;">warm up</span>, and <span
-                    style="color:#bcb33e;">survive </span>by</p>
-            <p>gathering resources, crafting items</p>
-            <p>and building a shelter. Fight other</p>
-            <p>players, and beware the <span style="color:#bcb33e;">radiation</span>!</p>
-        </div>
-        <div id="howtoplayCommands">COMMANDS</div>
-        <div id="mainCommands">
-            <div id="moveCommand">MOVE</div>
-            <div id="hitCommands">HIT </div>
-            <div id="runCommands">RUN </div>
-        </div>
-        <div id="secondCommands">
-            <div id="interactCommands">INTERACT</div>
-            <div id="craftCommands">CRAFT</div>
-            <div id="mapCommands">MAP</div>
-        </div>
-    </div>
-    <div id="preroll">
-    </div>
-    <div id="chat">
-        <input id="chatInput" type="text" placeholder="Enter text..." maxLength="60">
-    </div>
+<canvas id="can"></canvas>
+<script src="client.js"></script>
+<div id="nickname">
+<input id="nicknameInput" type="text" placeholder="Nickname" maxLength="16">
+</div>
+<div id="terms">
+</div>
+<div id="serverList">
+<select id="servers">
+</select>
+</div>
+<div id="changelog">
+<div id="changelogTitle">CHANGELOG</div>
+<a target="blank"><img id="changelogImg" src="./img/changelog-28.png" alt="Devastio"></a>
+<div id="scrollChangelog">
+<div style="margin-top: 5px;"> - <a target="blank" style="color:white;">SEE MORE</a> - </div>
+<div id="changelogText">Your predecessors did not survive. But they have left behind <span style="color:#bcb33e;">some vestiges!</span> Dare to venture into the <span style="color:#bcb33e;">cave</span>, tunnel through the stone and maybe you will discover a <span style="color:#bcb33e;">hidden bunker</span>.
+Have you always dreamed of being green and radioactive? Do you look good with dynamite? Do you want to work with long, rotten brains? Maybe you're cut out to <span style="color:#bcb33e;">be a Ghoul</span>? That's good news! The <span style="color:#bcb33e;">new game mode </span>offers you the opportunity to transform yourself and create chaos around you!"</span>
+</div>
+</div>
+</div>
+<div id="howtoplay">
+<div id="howtoplayTitle">HOW TO PLAY?</div>
+<div id="howtoplayText">
+<p><span style="color:#bcb33e;">Eat</span>, <span style="color:#bcb33e;">warm up</span>, and <span style="color:#bcb33e;">survive </span>by</p>
+<p>gathering resources, crafting items</p>
+<p>and building a shelter. Fight other</p>
+<p>players, and beware the <span style="color:#bcb33e;">radiation</span>!</p>
+</div>
+<div id="howtoplayCommands">COMMANDS</div>
+<div id="mainCommands"> <div id="moveCommand">MOVE</div> <div id="hitCommands">HIT </div> <div id="runCommands">RUN </div></div>
+<div id="secondCommands"><div id="interactCommands">INTERACT</div> <div id="craftCommands">CRAFT</div><div id="mapCommands">MAP</div></div>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-46CXB37MTT"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-46CXB37MTT');
+</script>
+</div>
+<div id="featuredVideo">
+</div>
+<div id="trevda">
+</div>
+<div id="preroll">
+</div>
+<div id="chat">
+<input id="chatInput" type="text" placeholder="Enter text..." maxLength="60">
+</div>
 </body>
 </html>
