--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 <meta property="og:image" content="https://raw.githubusercontent.com/devasio/Devast/main/img/banner.png" />
 <meta property="og:image:width" content="500" />
 <meta property="og:image:height" content="250" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:url" content="https://devasio.github.io/Devast/" />
+<meta name="twitter:title" content="Devast.io - The post-apocalyptic survival game" />
+<meta name="twitter:description" content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
+<meta name="twitter:image" content="https://raw.githubusercontent.com/devasio/Devast/main/img/banner.png" />
 <meta name="mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="robots" content="index, follow" />
