--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@ Have you always dreamed of being green and radioactive? Do you look good with dy
 <div id="mainCommands"> <div id="moveCommand">MOVE</div> <div id="hitCommands">HIT </div> <div id="runCommands">RUN </div></div>
 <div id="secondCommands"><div id="interactCommands">INTERACT</div> <div id="craftCommands">CRAFT</div><div id="mapCommands">MAP</div></div>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-46CXB37MTT"></script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2132227743869766"
+   crossorigin="anonymous"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
