--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta name="keywords" content="devast, devast.io, post-apocalyptic, post-apocalyptic survival game, survival game, online game, mmo, multiplayer, starve.io, starveio, survival, io games, .io, craft, browser game, html game, html5 game, flash game, wasteland, radioactivity, irradiated city, uranium, hunger, cold, weapons, crafting, cities, nuclear war, nuclear, cute, fun, hardcore, fight" />
 <meta property="og:title" content="Devast.io - The post-apocalyptic survival game" />
 <meta property="og:description" content="In a post-apocalyptic world where nature takes back its rights. Build a bunker, weapons, warm up and produce your own food to protect yourself from this ruthless world and the many other survivors. Play completely free online with other players now!" />
-<meta property="og:url" content="https://devast.io" />
-<meta property="og:site_name" content="devast.io" />
+<meta property="og:url" content="https://devasio.github.io/Devast/" />
+<meta property="og:site_name" content="devasio.github.io/Devast/" />
 <meta property="og:image" content="https://raw.githubusercontent.com/devasio/Devast/main/img/banner.png" />
 <meta property="og:image:width" content="500" />
 <meta property="og:image:height" content="250" />
